// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentsPanelContainer initializes the sidebar 1`] = `
<CommentsPanel
  entryId="my-entry"
  environmentId="my-env"
  spaceId="my-space"
/>
`;

exports[`CommentsPanelContainer makes panel hidden 1`] = `
<CommentsPanel
  entryId="my-entry"
  environmentId="my-env"
  isVisible={false}
  spaceId="my-space"
/>
`;

exports[`CommentsPanelContainer makes panel visible 1`] = `
<CommentsPanel
  entryId="my-entry"
  environmentId="my-env"
  isVisible={true}
  spaceId="my-space"
/>
`;
